@@ -2,6 +2,7 @@ current SVN version
 
 version 1.2.0 (2011-06-24)
 	Isgl3dPODImporter: fix bug in Isgl3dPODImporter for models without UVs (Issue #5)
+	Isgl3dParticleGenerator/Isgl3dParticlePath: Bug fixes (thanks to Massimiliano Rossi) 
 	Isgl3dCamera: allow camera to be fixed to local frame of reference, can be manipulated like normal Isgl3dNode (use isTargetCamera = NO) 
 	Isgl3dDirector: Fix bug on resume, reset delta time to 0
 	Isgl3dRender1/Isgl3dGenericShader: Fix bug with lighting when using views with and without light sources
